--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <a href="#" class="logo">Logo</a>
+        <ul class="lista">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-transparent navbar">
+            <div class="container-fluid">
+              <a class="navbar-brand logo" href="#">Logo</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 lista">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Work</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav> -->
+    </header>
+    <section>
+        <img src="assets/img/stars.png" alt="stars" class="stars" id="stars">
+        <img src="assets/img/moon.png" alt="moon" class="moon" id="moon">
+        <img src="assets/img/mountains_behind.png" alt="mountains_behind" class="mountains_behind" id="mountains_behind">
+        <h2 class="bg-text" id="bg-text">Moon Light</h2>
+        <a href="#sec" class="btn-explore" id="btn-explore">Explore</a>
+        <img src="assets/img/mountains_front.png" alt="mountains_front" class="mountains_front" id="mountains_front">
+    </section>
+    <div class="sec" id="sec">
+        <h2>Parallax Scrolling Effects</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores!<br><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores!<br><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores!<br><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam molestiae, est illo necessitatibus natus temporibus explicabo sed iure perspiciatis facere tempora nemo corporis exercitationem porro iusto nesciunt quo tenetur dolores!</p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
